# chip-8-database-rs

./: .editorconfig  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: color.rs  font.rs  input.rs  lib.rs  origin.rs  platform.rs  program.rs  quirk.rs  rom.rs  rotation.rs
