[package]
name = "chip-8-database-rs"
version = "0.1.0"
edition = "2021"

authors = ["Estus"]
categories = ["config", "data-structures", "emulators"]
description = "Embed the CHIP-8 DB in your own CHIP-8 implementation"
keywords = ["CHIP-8", "metadata", "ROM", "hashes"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Estus-Dev/chip-8-database-rs"

exclude = [
    ".gitmodules",
    "./target/",
    "./chip-8-database",
    "**/*.js",
    "**/package-lock.json",
    "**/.github/**/*",
    "**/.gitignore",
    "**/.prettierrc.json",
]

[dependencies]
base16ct = { version = "0.2.0", optional = true }
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_repr = "0.1.12"
sha1 = { version = "0.10.5", optional = true }

[features]

default = ["hashes", "platforms", "quirks"]

# Whether to embed the data from `sha1-hashes.json`. Required for ROM lookups.
hashes = ["dep:base16ct", "dep:sha1"]

# Whether to embed the data from `platforms.json`
platforms = []

# Whether to embed the data from `quirks.json`
quirks = []
