[package]
name = "chip8_db"
version = "2.1.0"
edition = "2021"

authors = ["Estus"]
categories = ["config", "data-structures", "emulators"]
description = "Embed the CHIP-8 DB in your own CHIP-8 implementation"
keywords = ["CHIP-8", "metadata", "ROM", "hashes"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Estus-Dev/chip-8-database-rs"

exclude = [
    ".gitmodules",
    "./target/",
    "./chip-8-database",
    "**/*.js",
    "**/package-lock.json",
    "**/.github/**/*",
    "**/.gitignore",
    "**/.prettierrc.json",
]

[dependencies]
base16ct = "0.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_repr = "0.1.12"
sha1 = "0.10.5"

[features]

# Whether to embed the data from `platforms.json` and `quirks.json`
extra-data = []
